# subio-config

./: .gitignore  README.md
docs/: AI_FEATURES.fa.md  RUN.fa.md  (+5 more)
iran-tester/: .dockerignore  .env.example  Dockerfile  README.fa.md  README.md  docker-compose.yml  install.sh  pyproject.toml  setup-github-proxy.sh  update.sh
iran-tester/app/: __init__.py  api.py  config.py  s3_worker.py  security.py  socks.py  sub_store.py  xray.py
iran-tester/tests/: test_cheap_mode.py  test_security_and_xray.py  test_sub_store.py
main-server/: .env.example  Dockerfile  README.fa.md  README.md  docker-compose.yml  install.sh  pyproject.toml  update.sh
main-server/app/: __init__.py  api.py  bot.py  communication.py  config.py  db.py  formatting.py  logging.py  monitor.py  s3_transport.py  security.py  telethon_utils.py  worker.py
main-server/app/ai/: __init__.py  admin_assistant.py  broadcast_polish.py  classify.py  daily_digest.py  extract.py  gateway.py  i18n.py  log_triage.py  naming.py  reports.py  scanner_advisor.py  security_filter.py  user_help.py
main-server/app/middleware/: __init__.py  forced_channels.py
main-server/app/services/: __init__.py  broadcast_service.py  comm_service.py  config_tester.py  decrypt_service.py  decryptor_json.py  distribution_service.py  emoji_service.py  forced_channel_service.py  geoip_service.py  message_service.py  npv_converter.py  panel_service.py  pipeline_events.py  qr_service.py  report_service.py  scanner_pipeline.py  scanner_settings_service.py  scoring_service.py  socks_service.py  subscription_service.py  subscription_sync.py
main-server/app/telegram_ui/: __init__.py  app.py  context.py  handlers.py  keyboards.py  middleware.py  texts.py
main-server/migrations/: 001_initial.sql  002_v21_extensions.sql  003_scanner_settings.sql  004_nullable_report_config.sql  005_premium_bot.sql  006_operator_reports.sql
main-server/tests/: test_ai_fallbacks.py  test_communication.py  test_config_tester.py  test_decrypt_service.py  test_decryptor_json.py  test_formatting.py  test_npv_converter.py  test_premium_bot.py  test_report_service.py  test_reports_ai.py  test_scoring_service.py
(+1 files in other folders)
