[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "subio-iran-tester"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=14.3,<16",
  "aiohttp>=3.12,<4",
  "aiohttp-socks>=0.10,<1",
  "cryptography>=45,<46",
  "fastapi>=0.116,<1",
  "prometheus-client>=0.22,<1",
  "pydantic-settings>=2.10,<3",
  "python-json-logger>=3.3,<4",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = ["mypy>=1.16,<2", "pytest>=8.4,<9", "pytest-asyncio>=1,<2", "ruff>=0.12,<1"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
