[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "subio-main"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=14.3,<16",
  "aiogram>=3.20,<4",
  "alembic>=1.15,<2",
  "arq>=0.26.1,<0.29",
  "asyncpg>=0.30,<1",
  "cryptography>=45,<46",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "openai>=1.82,<2",
  "orjson>=3.10,<4",
  "prometheus-client>=0.22,<1",
  "pydantic-settings>=2.10,<3",
  "py3xui>=0.4,<1",
  "python-json-logger>=3.3,<4",
  "redis[hiredis]>=5.0.0,<6",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "telethon>=1.40,<2",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = ["mypy>=1.16,<2", "pytest>=8.4,<9", "pytest-asyncio>=1,<2", "ruff>=0.12,<1"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
